--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
-	<p>Bienvenue danss cette formation GIT!</p>
+	<div id = "top_banner">
+		<p>Bienvenue dans cette formation GIT!</p>
+	</div>
+	
 </body>
 </html>
