Ajout de la balise div de l'exercice

--- a/hello.html
+++ b/hello.html
@@ -10,6 +10,10 @@
 	<div id = "top_banner">
 		<p>Bienvenue dans cette formation GIT!</p>
 	</div>
+
+	<div id = "Etud">
+		<p>Je suis un étudiant de l'INP</p>
+	</div>
 	
 </body>
 </html>
